[package]
name = "diskann-inmem"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["must_cast"] }
crossbeam-queue = "0.3.12"
dashmap.workspace = true
diskann = { workspace = true }
diskann-utils = { workspace = true, default-features = false }
diskann-vector = { workspace = true }
diskann-wide = { workspace = true }
parking_lot = "0.12.5"
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["macros"] }
