[package]
name = "diskann-inmem"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["must_cast"] }
crossbeam-queue = "0.3.12"
dashmap.workspace = true
diskann = { workspace = true }
diskann-utils = { workspace = true, default-features = false }
diskann-vector = { workspace = true }
diskann-wide = { workspace = true }
parking_lot = "0.12.5"
thiserror = { workspace = true }
half = { workspace = true }

# Integration Test Dependencies
diskann-benchmark-runner = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tempfile = { workspace = true }

[[bin]]
name = "integration-tests"
path = "integration/main.rs"
required-features = ["integration-test"]

[features]
default = []

# Enable stress test module
integration-test = [
    "dep:diskann-benchmark-runner",
    "dep:serde",
    "dep:serde_json",
    "dep:anyhow",
    "dep:rand",
]
