[package]
name = "diskann-label-filter"
version.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[lints]
clippy.undocumented_unsafe_blocks = "warn"
clippy.uninlined_format_args = "allow"

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
roaring.workspace = true
num-traits.workspace = true
diskann = { workspace = true }
thiserror.workspace = true
bf-tree.workspace = true
scc = "3.3.2"
diskann-utils = { workspace = true, default-features = false }
diskann-vector.workspace = true
tracing.workspace = true


[dev-dependencies]
criterion.workspace = true
hashbrown.workspace = true
rand.workspace = true
tempfile.workspace = true
anyhow.workspace = true
futures-util.workspace = true
tracing.workspace = true



[[bench]]
name = "main"
harness = false
