[package]
name = "diskann-linalg"
version.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
faer = { version = "0.23", default-features = false, features = ["std"]}
cfg-if.workspace = true
thiserror.workspace = true
rand_distr.workspace = true
rand.workspace = true

[features]
# OpenBLAS backend for selected ops (sgemm_aat_lower → cblas_ssyrk).
# build.rs uses pkg-config to find OpenBLAS; falls back to plain -lopenblas
# (Ubuntu's libopenblas-dev installs to /usr/lib/x86_64-linux-gnu).
# Preferred over MKL because OpenBLAS lacks MKL's anti-AMD CPUID dispatch.
openblas = []

[lints]
clippy.undocumented_unsafe_blocks = "warn"
clippy.uninlined_format_args = "allow"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
approx = { workspace = true }
