[package]
name = "diskann-quantization"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
cfg-if = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
diskann-vector = { workspace = true }
diskann-wide = { workspace = true }
diskann-linalg = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
flatbuffers = { version = "25.2.10", optional = true }
half = { version = "2.6.0", features = ["bytemuck"] }
diskann-utils = { workspace = true }

# Cache size detection. x86_64 uses CPUID; aarch64 Linux/macOS use OS APIs.
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.5"

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
libc = "0.2.148"

[lints.clippy]
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
uninlined_format_args = "allow"

[dev-dependencies]
cfg-if = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
trybuild = "1.0.101"
rand_distr = { workspace = true }

[features]
default = ["rayon"]

# Add support for linear-algebran enhanced routines.
linalg = ["dep:diskann-linalg"]

# Compile support for serializing and deserializing to flatbuffers.
flatbuffers = ["dep:flatbuffers"]

# Enable Rayon-based Parallelism for tagged kernels.
rayon = ["dep:rayon", "diskann-utils/rayon"]

# Compile the `.fbs` files in `schemas` using the `flatc` executable and copy the generated
# files into the source tree.
#
# This avoids a general dependency on the `flatc` executable to build `quantization`.
flatbuffers-build = []

# Instantiate well named functions for distance functions whose aseembly we care about.
#
# This adds to the compile time of the library without meaningfully adding features to the
# library and is meant to help with tooling.
codegen = []

# Note
#
# Build docs locally with
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc \
#    --package quantization \
#    --features rayon,linalg,flatbuffers \
#    --no-deps
# ```
[package.metadata.docs.rs]
features = ["rayon", "linalg", "flatbuffers"]
rustdoc-args = ["--cfg", "docsrs"]
