[package]
name = "diskann-record"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["disk"]
serde = ["dep:serde"]
disk = ["serde", "dep:serde_json"]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
