[package]
name = "diskann-utils"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
half = { workspace = true, features = ["rand_distr", "num-traits"] }
cfg-if.workspace = true
rayon = { workspace = true, optional = true }
thiserror.workspace = true
diskann-vector = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
diskann-wide = { workspace = true }
bytemuck = { workspace = true, features = ["must_cast"] }
serde_yaml = { version = "0.9.34", optional = true }

[lints]
workspace = true

# [lints.clippy]
# undocumented_unsafe_blocks = "warn"
# unwrap_used = "warn"
# expect_used = "warn"
# panic = "warn"
# uninlined_format_args = "allow"

[dev-dependencies]
cfg-if.workspace = true
rand.workspace = true
rstest.workspace = true
tempfile.workspace = true
diskann-benchmark-runner = { workspace = true, features = ["ux-tools"] }


[features]
default = ["rayon"]

# Enable Rayon-based Parallelism for tagged kernels.
rayon = ["dep:rayon"]
# Enable testing utilities like test_data_root()
testing = []
# Enable BigANN runbook parsing and execution support.
bigann = ["dep:serde_yaml"]
