# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
[package]
name = "diskann-vector"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if.workspace = true
half.workspace = true
diskann-wide.workspace = true
# Required by the `lsh` module — keeping these here lets PiPNN and any future
# graph-builder share a single LSH primitive instead of inlining their own.
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true

[dev-dependencies]
approx.workspace = true
iai-callgrind.workspace = true
criterion.workspace = true
half = { workspace = true, features = ["rand_distr", "num-traits"] }

[[bench]]
name = "bench_main"
harness = false

[[bench]]
name = "bench_main_vector_iai"
harness = false

[lints]
# Commenting out for now. It would give warnings.
# clippy.undocumented_unsafe_blocks = "warn"
clippy.uninlined_format_args = "allow"

